2006-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-newline-and-indent): Remove debugging.

2006-04-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* smiley.el: Revert previous change.
	(smiley-data-directory): defvar it before using it in the
	defcustom of `smiley-style'.

2006-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-newline-and-indent): New function.

	* ecomplete.el: Implement more bits.

	* message.el (message-put-addresses-in-ecomplete): Clean up the
	string. 

	* ecomplete.el (ecomplete-add-item): Chop off decimals.

	* gnus-sum.el (gnus-summary-save-parts): Bind
	gnus-summary-save-parts-counter and use it to make unique file
	names.

	* gnus-art.el (gnus-ignored-headers): Add some more headers.

	* ietf-drums.el (ietf-drums-parse-addresses): Take a RAWP
	parameter to say whether to actually parse the individual
	addresses. 

	* message.el (message-put-addresses-in-ecomplete): New function.
	(ecomplete): Require.
	(message-mail-alias-type): Add ecomplete as an option.

2006-04-12  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* flow-fill.el (fill-flowed): Remove trailing space from blank
	quoted lines.

2006-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* smiley.el (smiley-style): Move definition later to avoid a
	compilation warning.

2006-04-12  Kenichi Handa  <handa@m17n.org>

	* rfc2231.el (rfc2231-decode-encoded-string): Work on unibyte
	buffer and then decode the buffer text if necessary.
	(rfc2231-encode-string): Be sure to work on multibyte buffer at
	first, and after mm-encode-body, change the buffer to unibyte.
	Use mm-disable-multibyte instead of set-buffer-multibyte.

2006-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-copy-part): Find name parameter in
	Content-Type header instead of Content-Disposition header.
	(gnus-mime-inline-part): Ditto.
	(gnus-mime-view-part-as-charset): Ignore charset that the part
	specifies.
